--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine, types, text\n",
+    "from sqlalchemy import create_engine, types, text, Engine\n",
     "import time\n",
     "\n",
     "from src import database_methods as dbm\n",
@@ -23,21 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8af7e3ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model answer (What is the capital of France?):\n",
-      "The capital of France is Paris (French: Paris).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client = InferenceClient(\n",
+    "client: InferenceClient = InferenceClient(\n",
     "    api_key=os.environ[\"HF_TOKEN\"],\n",
     ")\n",
     "\n",
@@ -70,39 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4c7b8ae5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DB Engine successfuly created\n",
-      "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "3900       17214   3924.50          6       60               654.08      0   \n",
-      "4565       18080   7841.16          2       18              3920.58      0   \n",
-      "521        12896     77.61          1      158                77.61      1   \n",
-      "3627       16851   2779.46          3        4               926.49      0   \n",
-      "2786       15785  18254.07          5       32              3650.81      0   \n",
-      "\n",
-      "                        email  \n",
-      "3900  customer_17214@mail.com  \n",
-      "4565  customer_18080@mail.com  \n",
-      "521   customer_12896@mail.com  \n",
-      "3627  customer_16851@mail.com  \n",
-      "2786  customer_15785@mail.com  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
-    "    engine = dbm.get_db_engine()\n",
+    "    engine: Engine = dbm.get_db_engine()\n",
     "    print(\"DB Engine successfuly created\")\n",
     "except Exception as e:\n",
     "    print(f\"DB Engine creation error: {e}\")\n",
     "\n",
-    "query = \"\"\"\n",
+    "query: str = \"\"\"\n",
     "SELECT \n",
     "    customer_id, \n",
     "    SUM(quantity * price) AS monetary, \n",
@@ -123,7 +93,7 @@
     "GROUP BY \n",
     "    customer_id;\n",
     "\"\"\"\n",
-    "df_rfm = pd.read_sql(\n",
+    "df_rfm: pd.DataFrame = pd.read_sql(\n",
     "    query, \n",
     "    engine\n",
     ")\n",
@@ -133,28 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5c354297",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Monetary threshold:\n",
-      "14660.86 \n",
-      "\n",
-      "Frequency threshold:\n",
-      "5.0 \n",
-      "\n",
-      "Average order value threshold:\n",
-      "3616.08 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "threshold_monetary = np.round(df_rfm[\"monetary\"].quantile(0.80), 2)\n",
+    "print(type(threshold_monetary))\n",
     "print(f\"Monetary threshold:\\n{threshold_monetary}\", \"\\n\")\n",
     "threshold_frequency = np.round(df_rfm[\"frequency\"].quantile(0.80), 2)\n",
     "print(f\"Frequency threshold:\\n{threshold_frequency}\", \"\\n\")\n",
@@ -164,44 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6e57d214",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "0          12004   1509.60          1      227              1509.60      1   \n",
-      "1          12006     24.76          1      218                24.76      1   \n",
-      "2          12008   5689.57          1      276              5689.57      1   \n",
-      "3          12013     69.96          1      359                69.96      1   \n",
-      "4          12024    149.52          1      176               149.52      1   \n",
-      "...          ...       ...        ...      ...                  ...    ...   \n",
-      "4713       18280    623.26          1      277               623.26      1   \n",
-      "4714       18281    576.58          1      180               576.58      1   \n",
-      "4715       18282   1044.86          2        7               522.43      0   \n",
-      "4716       18283  12114.61         16        3               757.16      0   \n",
-      "4717       18287  18139.56          3       42              6046.52      0   \n",
-      "\n",
-      "                        email    segmentation  \n",
-      "0     customer_12004@mail.com  churn_recovery  \n",
-      "1     customer_12006@mail.com  churn_recovery  \n",
-      "2     customer_12008@mail.com  churn_recovery  \n",
-      "3     customer_12013@mail.com  churn_recovery  \n",
-      "4     customer_12024@mail.com  churn_recovery  \n",
-      "...                       ...             ...  \n",
-      "4713  customer_18280@mail.com  churn_recovery  \n",
-      "4714  customer_18281@mail.com  churn_recovery  \n",
-      "4715  customer_18282@mail.com  standard_promo  \n",
-      "4716  customer_18283@mail.com     vip_loyalty  \n",
-      "4717  customer_18287@mail.com     vip_loyalty  \n",
-      "\n",
-      "[4718 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conditions = [\n",
     "    (df_rfm[\"churn\"] == 1),\n",
@@ -215,7 +136,8 @@
     "            )\n",
     "    )\n",
     "]\n",
-    "choice = [\n",
+    "print(type(conditions))\n",
+    "choice: list[str, str] = [\n",
     "    \"churn_recovery\", \n",
     "    \"vip_loyalty\"\n",
     "]\n",
@@ -226,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "00324350",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vip_loyalty_prompt = r\"\"\"\n",
+    "vip_loyalty_prompt: str = r\"\"\"\n",
     "    You are a Customer Success Manager for a premium brand. \n",
     "    Write a short, exclusive appreciation email to our VIP customer. \n",
     "    Thank them for their loyalty. \n",
@@ -239,7 +161,7 @@
     "    Tone: Professional, grateful, and exclusive. \n",
     "    Keep it under 100 words. Do not use hashtags.\n",
     "\"\"\"\n",
-    "churn_recovery_prompt = r\"\"\"\n",
+    "churn_recovery_prompt: str = r\"\"\"\n",
     "    You are a warm and friendly Customer Support Specialist. \n",
     "    Write a 'We Miss You' email to a customer who hasn't purchased in a while. \n",
     "    Convince them to come back. \n",
@@ -248,7 +170,7 @@
     "    Keep it under 80 words.\"\n",
     "\"\"\"\n",
     "\n",
-    "standard_promo_prompt = r\"\"\"\n",
+    "standard_promo_prompt: str = r\"\"\"\n",
     "    You are an energetic Marketing Copywriter. \n",
     "    Write a catchy promotional email to an active customer. \n",
     "    Encourage them to check out our new arrivals. \n",
@@ -257,7 +179,7 @@
     "    Keep it under 80 words.\n",
     "\"\"\"\n",
     "\n",
-    "prompt = {\n",
+    "prompt: dict[str,str] = {\n",
     "    \"vip_loyalty\": vip_loyalty_prompt, \n",
     "    \"churn_recovery\": churn_recovery_prompt, \n",
     "    \"standard_promo\": standard_promo_prompt\n",
@@ -297,48 +219,10 @@
    "execution_count": null,
    "id": "da4a4df5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dear valued customer,\n",
-      "\n",
-      "We're thrilled to announce the arrival of our latest collection at Wojciech Kiełbowicz & Co! From chic blouses to timeless coats, our new arrivals are here to elevate your wardrobe game. Don't miss out on these stunning additions that will take your style to the next level. As a loyal patron, we're delighted to offer you an exclusive 10% discount on your next order with code HELLO10. Act fast and treat yourself or a loved one to the freshest pieces. Browse now and upgrade your wardrobe with the latest in fashion. Shop with us and feel the difference. Your satisfaction is our priority, always.\n",
-      "\n",
-      "[Your Customer ID: 14737]\n",
-      "\n",
-      "Experience our exceptional service and exceptional quality. Upgrade your wardrobe with our newest arrivals at Wojciech Kiełbowicz & Co. Visit us in-store or online and use code HELLO10 for a 10% discount on your next purchase. Our collection is the perfect blend of modern and classic, guaranteed to delight. Shop now at wojciechkielbowicz.com or visit us in-store. Thank you for your continued support. \n",
-      "\n",
-      "Best Regards,\n",
-      "The Wojciech Kiełbowicz & Co. Team.\n",
-      "--------------------------------------------------\n",
-      "Dear Valued Customer,\n",
-      "\n",
-      "At Wojciech Kiełbowicz & Co, we are immensely grateful for your unwavering loyalty and continued patronage. Your unwavering support has been a true testament to the exceptional quality and craftsmanship that defines our brand. As a VIP client, we understand the importance of your preferences and trust in our products, and we are honored to have earned your confidence. In appreciation of your commitment to our premium brand, we would like to extend a special offer to you. As a token of gratitude, we are thrilled to gift you with a 20% discount on your next purchase. Simply enter the code VIP20 at checkout to avail this exclusive offer.\n",
-      "\n",
-      "Your loyalty has not gone unnoticed, and we would like to express our sincere thanks for choosing us as your preferred fashion destination. Our commitment to delivering exceptional products and impeccable service is unwavering, and we are proud to have you as part of our family.\n",
-      "\n",
-      "We are delighted to extend this offer to you, as a gesture of our gratitude, and we hope this gesture further strengthens our relationship. As a VIP customer, we assure you of our steadfast commitment to providing the finest garments that embody timeless elegance and sophistication. We look forward to continuing our partnership and thank you for choosing us for all your future fashion needs.\n",
-      "\n",
-      "With sincere appreciation,\n",
-      "\n",
-      "The Wojciech Kiełbowicz & Co Team.\n",
-      "--------------------------------------------------\n",
-      "Dear Valued Customer,\n",
-      "\n",
-      "At Wojciech Kiełbowicz & Co, we would like to extend our heartfelt thanks for your unwavering loyalty and continued support. Your patronage has not gone unnoticed, and we are honored to have you as one of our most cherished clients. As a testament to our appreciation, we are pleased to offer you a special discount of 20% off your next purchase with the code VIP20. This exclusive gesture is our way of expressing our gratitude for your commitment to our brand. Your loyalty has been instrumental in our growth and success, and we are privileged to have you as part of our community. We take pride in delivering exceptional products and services, and we are committed to upholding your satisfaction with every interaction. Please use the code VIP20 during checkout to redeem this limited-time offer. Thank you for your patronage and we look forward to continuing our partnership.\n",
-      "\n",
-      "Sincerely,\n",
-      "\n",
-      "The Wojciech Kiełbowicz & Co Team\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "df_test = df_rfm.sample(3)\n",
+    "df_test: pd.DataFrame = df_rfm.sample(3)\n",
     "df_test[\"email_draft\"] = df_test.apply(aiam.generate_email, axis=1, args=(client, prompt))\n",
     "for i in range(3):\n",
     "    print(df_test[\"email_draft\"].iloc[i])\n",
