--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "8af7e3ac",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "4c7b8ae5",
    "metadata": {},
    "outputs": [
@@ -80,18 +80,18 @@
      "text": [
       "DB Engine successfuly created\n",
       "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "1114       13658  10373.48          5        9              2074.70      0   \n",
-      "2462       15382  40748.55          6       14              6791.43      0   \n",
-      "4484       17965  18415.04         14       37              1315.36      0   \n",
-      "1208       13775     11.53          1      142                11.53      1   \n",
-      "1975       14764   2232.72          1       46              2232.72      0   \n",
+      "1454       14089   1538.60          1       56              1538.60      0   \n",
+      "4216       17625  14370.80          4       18              3592.70      0   \n",
+      "2282       15156   5097.06          3        1              1699.02      0   \n",
+      "3949       17282  20742.68          3      130              6914.23      1   \n",
+      "3724       16979  10287.81          6        3              1714.64      0   \n",
       "\n",
       "                        email  \n",
-      "1114  customer_13658@mail.com  \n",
-      "2462  customer_15382@mail.com  \n",
-      "4484  customer_17965@mail.com  \n",
-      "1208  customer_13775@mail.com  \n",
-      "1975  customer_14764@mail.com  \n"
+      "1454  customer_14089@mail.com  \n",
+      "4216  customer_17625@mail.com  \n",
+      "2282  customer_15156@mail.com  \n",
+      "3949  customer_17282@mail.com  \n",
+      "3724  customer_16979@mail.com  \n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "5c354297",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "6e57d214",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "00324350",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
     "3. Operational Scope & Sampling Strategy\n",
     "To ensure high availability and model performance, the system utilizes the Groq AI inference provider (via Hugging Face integration).\n",
     "\n",
-    "Due to the strict usage quotas and rate limits associated with the free tier of this provider, the generation process is strictly limited to a representative sample of the first 50 customers (df_rfm.head(50)).\n",
+    "Due to the strict usage quotas and rate limits associated with the free tier of this provider, the generation process is strictly limited to a representative sample of the first 40 customers (df_rfm.head(40)).\n",
     "\n",
     "Rationale: This sample size is sufficient to validate the Proof of Concept (PoC) and demonstrate the efficacy of the personalization prompts without incurring overage costs or triggering API blocks.\n",
     "\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "da4a4df5",
    "metadata": {},
    "outputs": [
@@ -312,31 +312,33 @@
      "output_type": "stream",
      "text": [
       "Email drafts successfully generated\n",
-      "Dear Customer 16971,\n",
+      "Dear Customer 14453,\n",
       "\n",
-      "We’ve just stocked fresh arrivals you’ll love—stylish, unique pieces ready to revamp your wardrobe.\n",
+      "We’ve missed you at Wojciech Kiełbowicz & Co and hope you’re doing well.\n",
       "\n",
-      "Explore now and enjoy an exclusive 10% off your next order with code HELLO10. Hurry, the new collection won’t wait!\n",
+      "To welcome you back, enjoy a 15% discount on your next purchase with code MISSYOU15. Feel free to reach out if you need any help.\n",
       "\n",
-      "Tap the link below and treat yourself today.\n",
-      "\n",
-      "Best regards,\n",
-      "The Wojciech Kiełbowicz & Co Team\n",
-      "--------------------------------------------------\n",
-      "Dear Customer 14650,\n",
-      "\n",
-      "We’ve noticed it’s been a while since your last visit and we truly miss having you with us. Your satisfaction means a lot, and we’d love to welcome you back.\n",
-      "\n",
-      "Enjoy a 15% welcome‑back discount on your next order with code MISSYOU15. Hope to see you soon!\n",
+      "We look forward to serving you again soon!\n",
       "\n",
       "Best regards,\n",
       "The Wojciech Kiełbowicz & Co Team\n",
       "--------------------------------------------------\n",
-      "Dear Customer 17912,\n",
+      "Dear Customer 13706,\n",
       "\n",
-      "We’ve missed you at Wojciech Kiełbowicz & Co! It’s been a while since your last visit, and we hope everything’s been great for you.\n",
+      "We’ve missed you at Wojciech Kiełbowicz & Co and hope you’re doing well.\n",
       "\n",
-      "To show our appreciation, here’s a 15% welcome‑back discount—just use code MISSYOU15 at checkout. We’d love to see you explore our newest collections.\n",
+      "As a thank‑you for being part of our family, enjoy 15% off your next order with code MISSYOU15.\n",
+      "\n",
+      "We’d love to see you back—let us know if you need any help choosing.\n",
+      "\n",
+      "Best regards,\n",
+      "The Wojciech Kiełbowicz & Co Team\n",
+      "--------------------------------------------------\n",
+      "Dear Customer 14834,\n",
+      "\n",
+      "Thank you for your continued loyalty to Wojciech Kiełbowicz & Co. Your trust in our premium collection inspires us to keep delivering exceptional quality.\n",
+      "\n",
+      "As a token of our appreciation, please enjoy an exclusive 20% discount on your next purchase with code VIP20. We look forward to serving you again soon.\n",
       "\n",
       "Best regards,\n",
       "The Wojciech Kiełbowicz & Co Team\n",
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "59c05d26",
    "metadata": {},
    "outputs": [
@@ -368,14 +370,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Email drafts are being generated...\n"
+      "Email drafts are being generated...\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-2c8f26ed6a5c5c016247fe2e;712e1bd7-8007-4d28-a389-7db50da9e10f)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-408704f45f9720cf678d1d81;ed02d6d5-2ad5-444a-8871-3aaef78a110f)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-73a1f0850b9c618d7a6356d7;2c8fd62c-35a8-49d2-a919-2e60c188198c)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-783d07097585f57c4355f265;23537887-e1e0-45e2-9e82-9cc0a241845b)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-6ff2310303a71d360f12884a;db828f06-ef1d-4084-b0ed-c118e0d89fc2)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-4e1094ad1177f36b496b03b8;9085f75c-0029-4cd1-9f45-cd592c5c308e)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-3e30979e4530feae0639d833;97cd3700-b208-416c-b7d8-5951f37e742d)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-72460d2f7ed29aa8402254bf;be0180e2-40de-4222-8a53-88270ecedb71)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-5ea1da6056bb1b1c1bc0da75;50945136-516e-4481-8edd-8b2b719c62c9)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-2f868cfd5bc733bf26a2a059;5c86ffe9-3494-41fd-bceb-dffbe96412a6)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-27bf9c8373bf5fc04a74c3d4;76c8d236-0438-4660-a114-b5342211e1db)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-6ce3505a2448583a0faddcac;ec853035-c60d-41f7-8be5-8c314d6816b2)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-4910858619ce6c0654152982;884433bd-39f2-4a4d-938f-2a35b8ce43c3)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-1765a54a1f79944544796f4d;cdb5dc6f-041a-4b2e-a048-b1224312c226)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-044f577338d48b206a75ab0f;2a41ff61-8f5f-4ff9-ae69-6fa379f4b0d5)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-7b955a3605ef0d5f1b7e07ec;2a700d0a-89e7-43d2-bfd4-9aa422911ba6)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-13eb14f50bdaa1d21acddd80;0d48ed42-e8a8-49e2-a437-508a28fb9075)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-6080f4fd6445da5b7b9d778a;50cccc68-e11d-4772-b230-ad78035f0497)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-3f65a6db3027f11c45435888;771d8764-7f5b-49e2-860d-a3edb1ab978c)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-26a9f85257c609d0799eebc1;6a18911d-73ae-4edf-a769-42932f7eecc0)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-1ecd973b669ac3635d1949dc;63716ea8-9e75-431f-aedb-3180dbd7e1e1)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Error:\n",
+      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-6709f66c3e4cf9545dfd9fc6;45a2fca9-52f1-40ec-8293-d14309dc4c9a)\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
+      "\n",
+      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Email drafts successfully generated\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    print(\"Email drafts are being generated...\")\n",
-    "    df_rfm[\"email_draft\"] = df_rfm.head(50).apply(aiam.generate_email, axis=1, args=(client,prompt))\n",
+    "    df_rfm[\"email_draft\"] = df_rfm.head(40).apply(aiam.generate_email, axis=1, args=(client,prompt))\n",
     "    print(\"Email drafts successfully generated\")\n",
     "except Exception as e:\n",
     "    print(f\"Email drafts unsuccessfully generated. Error: {e}\")\n",
@@ -385,7 +498,7 @@
     "    \"email_draft\"\n",
     "]\n",
     "\n",
-    "df_rfm.head(50)[cols].to_csv(\"../data/processed/marketing_campaign_drafts.csv\", index=False)\n",
+    "df_rfm.head(40)[cols].to_csv(\"../data/processed/marketing_campaign_drafts.csv\", index=False)\n",
     "del cols"
    ]
   }
