change API and AI model

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "from huggingface_hub import InferenceClient\n",
+    "from groq import Groq\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8af7e3ac",
    "metadata": {},
    "outputs": [
@@ -37,14 +37,12 @@
     }
    ],
    "source": [
-    "client: InferenceClient = InferenceClient(\n",
-    "    api_key=os.environ[\"HF_TOKEN\"],\n",
-    ")\n",
+    "client: Groq = Groq(api_key=os.environ.get(\"GROQ_API_KEY\"))\n",
     "\n",
     "try:\n",
     "    \n",
     "    completion = client.chat.completions.create(\n",
-    "        model=\"openai/gpt-oss-120b:groq\", \n",
+    "        model=\"openai/gpt-oss-120b\", \n",
     "        messages=[\n",
     "            {\n",
     "                \"role\": \"user\",\n",
@@ -55,7 +53,7 @@
     "\n",
     "    print(f\"Model answer (What is the capital of France?):\\n{completion.choices[0].message.content}\")\n",
     "except Exception as e:\n",
-    "    print(\"Model unsuccessfully loaded\")"
+    "    print(\"Model unsuccessfully loaded. Error: {e}\")"
    ]
   },
   {
@@ -294,7 +292,7 @@
     "3. Operational Scope & Sampling Strategy\n",
     "To ensure high availability and model performance, the system utilizes the Groq AI inference provider (via Hugging Face integration).\n",
     "\n",
-    "Due to the strict usage quotas and rate limits associated with the free tier of this provider, the generation process is strictly limited to a representative sample of the first 40 customers (df_rfm.head(40)).\n",
+    "Due to the strict usage quotas and rate limits associated with the free tier of this provider, the generation process is strictly limited to a representative sample of the first 500 customers (df_rfm.head(500)).\n",
     "\n",
     "Rationale: This sample size is sufficient to validate the Proof of Concept (PoC) and demonstrate the efficacy of the personalization prompts without incurring overage costs or triggering API blocks.\n",
     "\n",
