change API and model

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8af7e3ac",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "4c7b8ae5",
    "metadata": {},
    "outputs": [
@@ -78,18 +78,18 @@
      "text": [
       "DB Engine successfuly created\n",
       "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "1454       14089   1538.60          1       56              1538.60      0   \n",
-      "4216       17625  14370.80          4       18              3592.70      0   \n",
-      "2282       15156   5097.06          3        1              1699.02      0   \n",
-      "3949       17282  20742.68          3      130              6914.23      1   \n",
-      "3724       16979  10287.81          6        3              1714.64      0   \n",
+      "1681       14388  27812.02          9       10              3090.22      0   \n",
+      "232        12542   6368.80          1      234              6368.80      1   \n",
+      "3093       16174   7470.14          3      126              2490.05      1   \n",
+      "2863       15877   2386.91          2        1              1193.46      0   \n",
+      "3361       16519    761.57          2       25               380.79      0   \n",
       "\n",
       "                        email  \n",
-      "1454  customer_14089@mail.com  \n",
-      "4216  customer_17625@mail.com  \n",
-      "2282  customer_15156@mail.com  \n",
-      "3949  customer_17282@mail.com  \n",
-      "3724  customer_16979@mail.com  \n"
+      "1681  customer_14388@mail.com  \n",
+      "232   customer_12542@mail.com  \n",
+      "3093  customer_16174@mail.com  \n",
+      "2863  customer_15877@mail.com  \n",
+      "3361  customer_16519@mail.com  \n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "5c354297",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "6e57d214",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "00324350",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "da4a4df5",
    "metadata": {},
    "outputs": [
@@ -310,33 +310,28 @@
      "output_type": "stream",
      "text": [
       "Email drafts successfully generated\n",
-      "Dear Customer 14453,\n",
+      "Dear Customer 15480,\n",
       "\n",
-      "We’ve missed you at Wojciech Kiełbowicz & Co and hope you’re doing well.\n",
+      "We’ve missed you! It’s been a while since your last visit and we’d love to welcome you back with a special 15% discount. Use code MISSYOU15 on your next order.\n",
       "\n",
-      "To welcome you back, enjoy a 15% discount on your next purchase with code MISSYOU15. Feel free to reach out if you need any help.\n",
-      "\n",
-      "We look forward to serving you again soon!\n",
+      "If there’s anything we can help with, just reply—we’re here for you. Hope to see you soon!\n",
       "\n",
       "Best regards,\n",
       "The Wojciech Kiełbowicz & Co Team\n",
       "--------------------------------------------------\n",
-      "Dear Customer 13706,\n",
+      "Dear Customer 15667,\n",
+      "We’re thrilled to unveil our latest arrivals—fresh styles and must‑have pieces just for you.\n",
       "\n",
-      "We’ve missed you at Wojciech Kiełbowicz & Co and hope you’re doing well.\n",
-      "\n",
-      "As a thank‑you for being part of our family, enjoy 15% off your next order with code MISSYOU15.\n",
-      "\n",
-      "We’d love to see you back—let us know if you need any help choosing.\n",
+      "Shop now and enjoy 10% off your next order with code HELLO10. Hurry, the new collection won’t last!\n",
       "\n",
       "Best regards,\n",
       "The Wojciech Kiełbowicz & Co Team\n",
       "--------------------------------------------------\n",
-      "Dear Customer 14834,\n",
+      "Dear Customer 13837,\n",
       "\n",
-      "Thank you for your continued loyalty to Wojciech Kiełbowicz & Co. Your trust in our premium collection inspires us to keep delivering exceptional quality.\n",
+      "We’ve missed you! It’s been a while since your last visit, and we’d love to welcome you back with a little something special.\n",
       "\n",
-      "As a token of our appreciation, please enjoy an exclusive 20% discount on your next purchase with code VIP20. We look forward to serving you again soon.\n",
+      "Enjoy 15% off your next purchase with code MISSYOU15. We hope to see you soon and help you find something you’ll love.\n",
       "\n",
       "Best regards,\n",
       "The Wojciech Kiełbowicz & Co Team\n",
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "59c05d26",
    "metadata": {},
    "outputs": [
@@ -368,117 +363,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Email drafts are being generated...\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-2c8f26ed6a5c5c016247fe2e;712e1bd7-8007-4d28-a389-7db50da9e10f)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-408704f45f9720cf678d1d81;ed02d6d5-2ad5-444a-8871-3aaef78a110f)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc882-73a1f0850b9c618d7a6356d7;2c8fd62c-35a8-49d2-a919-2e60c188198c)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-783d07097585f57c4355f265;23537887-e1e0-45e2-9e82-9cc0a241845b)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-6ff2310303a71d360f12884a;db828f06-ef1d-4084-b0ed-c118e0d89fc2)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-4e1094ad1177f36b496b03b8;9085f75c-0029-4cd1-9f45-cd592c5c308e)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-3e30979e4530feae0639d833;97cd3700-b208-416c-b7d8-5951f37e742d)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc883-72460d2f7ed29aa8402254bf;be0180e2-40de-4222-8a53-88270ecedb71)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-5ea1da6056bb1b1c1bc0da75;50945136-516e-4481-8edd-8b2b719c62c9)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-2f868cfd5bc733bf26a2a059;5c86ffe9-3494-41fd-bceb-dffbe96412a6)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-27bf9c8373bf5fc04a74c3d4;76c8d236-0438-4660-a114-b5342211e1db)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-6ce3505a2448583a0faddcac;ec853035-c60d-41f7-8be5-8c314d6816b2)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-4910858619ce6c0654152982;884433bd-39f2-4a4d-938f-2a35b8ce43c3)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc884-1765a54a1f79944544796f4d;cdb5dc6f-041a-4b2e-a048-b1224312c226)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-044f577338d48b206a75ab0f;2a41ff61-8f5f-4ff9-ae69-6fa379f4b0d5)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-7b955a3605ef0d5f1b7e07ec;2a700d0a-89e7-43d2-bfd4-9aa422911ba6)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-13eb14f50bdaa1d21acddd80;0d48ed42-e8a8-49e2-a437-508a28fb9075)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-6080f4fd6445da5b7b9d778a;50cccc68-e11d-4772-b230-ad78035f0497)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc885-3f65a6db3027f11c45435888;771d8764-7f5b-49e2-860d-a3edb1ab978c)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-26a9f85257c609d0799eebc1;6a18911d-73ae-4edf-a769-42932f7eecc0)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-1ecd973b669ac3635d1949dc;63716ea8-9e75-431f-aedb-3180dbd7e1e1)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
-      "Error:\n",
-      "Client error '402 Payment Required' for url 'https://router.huggingface.co/v1/chat/completions' (Request ID: Root=1-698cc886-6709f66c3e4cf9545dfd9fc6;45a2fca9-52f1-40ec-8293-d14309dc4c9a)\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/402\n",
-      "\n",
-      "Credit balance is depleted: purchase pre-paid credits to continue using Inference Providers with your account. Alternatively, subscribe to PRO to get 20x more included usage.\n",
+      "Email drafts are being generated...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Email drafts successfully generated\n"
      ]
     }
